@@ -1,12 +1,13 @@
-#Sun Apr 15 13:56:14 2007
+#Sun Apr 22 14:04:14 2007
 setstate FHZ fhtbuf: 1c
 setstate FHZ 2006-02-12 14:03:39 fhtbuf 23
 setstate FHZ 2006-03-26 08:47:36 init2 deadbeefdeadbe
 setstate FHZ 2006-03-26 08:47:36 serial deadbeef
+setstate blink Next: 14:04:17
 setstate btn4 on
 setstate btn4 2006-04-12 15:19:33 state on
-setstate cellar on
-setstate cellar 2007-04-15 13:53:21 state on
+setstate cellar on-for-timer 2
+setstate cellar 2007-04-22 14:04:12 state on-for-timer 2
 setstate fl measured-temp: 21.6 (Celsius)
 setstate fl 2006-03-29 23:02:30 actuator 00%
 setstate fl 2006-03-26 08:50:54 day-temp 21.5 (Celsius)
@@ -32,11 +33,7 @@ setstate fl 2006-03-26 08:50:55 unknown_85 4
 setstate fl 2006-03-26 08:50:46 wed-from1 06:00
 setstate fl 2006-03-26 08:50:46 wed-to1 23:00
 setstate fl 2006-03-26 08:50:55 windowopen-temp 12.0 (Celsius)
-setstate floor-lamp on
-setstate floor-lamp 2006-03-29 12:05:34 state on
 setstate global <no definition>
-setstate living-light on
-setstate living-light 2007-04-15 13:54:48 state on
 setstate marqee on
 setstate marqee 2006-04-01 12:46:02 state on
 setstate n_btn4 active
@@ -45,8 +42,6 @@ setstate tf1 2006-04-11 09:48:48 battery Bat: ok
 setstate tf1 2006-04-11 09:48:48 humidity 31.3 (%)
 setstate tf1 2006-04-11 09:48:48 temperature 20.3 (Celsius)
 setstate tf1 2006-04-11 09:48:48 type HMS100TF
-setstate window-lamp on
-setstate window-lamp 2006-03-29 12:05:34 state on
 setstate wz measured-temp: 22.4 (Celsius)
 setstate wz 2006-03-29 23:04:17 actuator 00%
 setstate wz 2006-03-26 08:52:30 day-temp 22.0 (Celsius)
